--- a/index.html
+++ b/index.html
@@ -13,20 +13,23 @@
     <!-- Header -->
     <header class="page-header">
         <!-- Navigation -->
+        <div class="page-nav">
         <nav class="site-navigaton">
-            <!-- Logo -->
+            
             <a href="index.html" class="logo"><span class="particle-web">Web</span>Studio</a>
-            <ul class="all-lists">
-                <li><a class="nav-list" class="nav-list" href="index.html">Студия</a></li>
-                <li><a class="nav-list" href="portfolio.html">Портфолио</a></li>
-                <li><a class="nav-list" href="">Контакты</a></li>
+            
+            <ul class="all-lists-nav">
+                <li class="item"><a class="nav-list" href="index.html">Студия</a></li>
+                <li class="item"><a class="nav-list" href="portfolio.html">Портфолио</a></li>
+                <li class="item"><a class="nav-list" href="">Контакты</a></li>
             </ul>
         </nav>
         <!-- Contacts -->
-        <ul class="all-lists">
-            <li><a class="contact-list" href="mailto:info@devstudio.com"> info@devstudio.com</a></li>
-            <li><a class="contact-list" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="all-lists-contact">
+            <li class="item"><a class="contact-list" href="mailto:info@devstudio.com"> info@devstudio.com</a></li>
+            <li class="item"><a class="contact-list" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
+        </div>
     </header>
     <!-- Main content -->
     <main>
