--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <!-- Header -->
-    <header class="page-header">
+    <header class="container page-header">
         <!-- Navigation -->
         <div class="page-nav">
         <nav class="site-navigaton">
@@ -33,6 +33,7 @@
     </header>
     <!-- Main content -->
     <main>
+        <div class="container">
         <!-- Hero section -->
         <section>
             <h1 class="hero-text">Эффективные решения <br>для вашего бизнеса</h1>
@@ -103,9 +104,10 @@
                 </li>
             </ul>
         </section>
+        </div>
     </main>
     <!-- Footer -->
-    <footer>
+    <footer class="container">
         <!-- Logo -->
         <a href="index.html" class="logo"><span class="particle-web">Web</span>Studio</a>
         <!-- Address -->
