--- a/index.html
+++ b/index.html
@@ -64,19 +64,21 @@
         </section>
         <!-- What are we doing section -->
         <section>
+            
             <h2 class="secondary-header">Чем мы занимаемся</h2>
 
-            <ul class="all-lists">
-                <li>
+            <ul class="all-lists features">
+                <li class="item">
                     <img src="./images/working-on-tablet.jpg" alt="Пишем код" width="370" height="295">
                 </li>
-                <li>
+                <li class="item">
                     <img src="./images/working-on-phone.jpg" alt="Адаптируем под телефоны" width="370" height="295">
                 </li>
-                <li>
+                <li class="item">
                     <img src="./images/working-on-tablet2.jpg" alt="Создаём дизайн" width="370" height="295">
                 </li>
             </ul>
+            
         </section>
         <!-- Our team section -->
         <section>
