--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <main>
         <div class="container">
         <!-- Hero section -->
-        <section>
+        <section class="hero-section">
             <h1 class="hero-text">Эффективные решения <br>для вашего бизнеса</h1>
             <button class="hero-button" type="button">Заказать услугу</button>
         </section>
@@ -81,7 +81,7 @@
             
         </section>
         <!-- Our team section -->
-        <section>
+        <section class="team">
             <h2 class="secondary-header">Наша команда</h2>
 
             <ul class="all-lists">
