--- a/portfolio.html
+++ b/portfolio.html
@@ -19,8 +19,8 @@
             <!-- Logo -->
             <a href="index.html" class="logo"><span class="particle-web">Web</span>Studio</a>
             <ul class="all-lists">
-                <li><a class="nav-list" class="nav-list" href="index.html">Студия</a></li>
-                <li><a class="nav-list" href="portfolio.html">Портфолио</a></li>
+                <li><a class="nav-list" class="nav-list" href="./index.html">Студия</a></li>
+                <li><a class="nav-list accent" href="./portfolio.html">Портфолио</a></li>
                 <li><a class="nav-list" href="">Контакты</a></li>
             </ul>
         </nav>
