--- a/portfolio.html
+++ b/portfolio.html
@@ -38,75 +38,93 @@
         <section>
             <div class="container">
             <h1 class="hiden-header">Портфолио</h1>
-            <ul class="all-lists">
-            <li><button type="button" class="filter">Все</button>
-            <li><button type="button" class="filter">Веб-сайты</button>
-            <li><button type="button" class="filter">Приложения</button>
-            <li><button type="button" class="filter">Дизайн</button>
-            <li><button type="button" class="filter">Маркетинг</button>
+            <ul class="all-lists  filter-list">
+            <li class="item"><button type="button" class="filter">Все</button>
+            <li class="item"><button type="button" class="filter">Веб-сайты</button>
+            <li class="item"><button type="button" class="filter">Приложения</button>
+            <li class="item"><button type="button" class="filter">Дизайн</button>
+            <li class="item"><button type="button" class="filter">Маркетинг</button>
         </ul>
-        <ul class="all-lists">
-            <li>
+        <ul class="all-lists work-list">
+            <li class="item">
                 <a class="portfolio-card-link" href="">
                     <img src="./images/notebook.jpg" alt="веб сайт Технокряк">
+                    <div class="work-about">
                     <h2 class="portfolio-card-header">Технокряк</h2>
                     <p class="portfolio-card-text">Веб-сайт</p>
+                    </div>
                 </a>
             </li>
-            <li>
+            <li class="item">
                 <a class="portfolio-card-link" href="">
                     <img src="./images/poster-new-orlean-vs-golden-star.jpg" alt="Постер New Orlean vs Golden Star">
+                    <div class="work-about">
                     <h2 class="portfolio-card-header">Постер New Orlean vs Golden Star</h2>
                     <p class="portfolio-card-text">Дизайн</p>
+                    </div>
                 </a>
             </li>
-            <li>
+            <li class="item">
                 <a class="portfolio-card-link" href="">
                     <img src="./images/restaurant-seafood.jpg" alt="Приложение Seafood">
+                    <div class="work-about">
                     <h2 class="portfolio-card-header">Ресторан Seafood</h2>
                     <p class="portfolio-card-text">Приложение</p>
-                </a>
+                    </div>
+                 </a>
             </li>
-            <li>
+            <li class="item">
                 <a class="portfolio-card-link" href="">
                     <img src="./images/headphones.jpg" alt="Проект Prime">
+                    <div class="work-about">
                     <h2 class="portfolio-card-header">Проект Prime</h2>
                     <p class="portfolio-card-text">Маркетинг</p>
+                    </div>
                 </a>
             </li>
-            <li>
+            <li class="item">
                 <a class="portfolio-card-link" href="">
                     <img src="./images/boxes-pj.jpg" alt="Проект Boxes">
+                    <div class="work-about">
                     <h2 class="portfolio-card-header">Проект Boxes</h2>
                     <p class="portfolio-card-text">Приложение</p>
+                    </div>
                 </a>
             </li>
-            <li>
+            <li class="item">
                 <a class="portfolio-card-link" href="">
                     <img src="./images/apple-mac.jpg" alt="Веб-сайт Inspiration has no Borders">
+                    <div class="work-about">
                     <h2 class="portfolio-card-header">Inspiration has no Borders</h2>
                     <p class="portfolio-card-text">Веб-сайт</p>
+                    </div>
                 </a>
             </li>
-            <li>
+            <li class="item">
                 <a class="portfolio-card-link" href="">
                     <img src="./images/book.jpg" alt="Дизайн издания Limited Edition">
+                    <div class="work-about">
                     <h2 class="portfolio-card-header">Издание Limited Edition</h2>
                     <p class="portfolio-card-text">Дизайн</p>
+                    </div>
                 </a>
             </li>
-            <li>
+            <li class="item">
                 <a class="portfolio-card-link" href="">
                     <img src="./images/label-tag.jpg" alt="Проект LAB">
+                    <div class="work-about">
                     <h2 class="portfolio-card-header">Проект LAB</h2>
                     <p class="portfolio-card-text">Маркетинг</p>
+                    </div>
                 </a>
             </li>
-            <li>
+            <li class="item">
                 <a class="portfolio-card-link" href="">
                     <img src="./images/working-on-notebook.jpg" alt="Приложение Growing Business">
+                    <div class="work-about">
                     <h2 class="portfolio-card-header">Growing Business</h2>
                     <p class="portfolio-card-text">Приложение</p>
+                    </div>
                 </a>
             </li>
 
