--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
     </header>
     <!-- Page navigation -->
     <main>
-        <section>
+        <section class="portfolio-section">
             <div class="container">
             <h1 class="hiden-header">Портфолио</h1>
             <ul class="all-lists  filter-list">
